--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,19 @@
 body {
-  font-family: "Poppins", sans-serif;
   color: white;
-  background: #1c1d21;
   margin: 0px;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: auto; /* Ensure vertical scrolling */
 }
+
+.title {
+  font-size: 30px;
+  letter-spacing: 1px;
+}
+
+/* .fade-scale {
+  opacity: 0.3;
+  transform: scale(0.7);
+} */
 
 #wrapper {
   padding-top: 8vmax;
@@ -52,4 +60,96 @@ body {
 
 .home-text {
   background-color: tomato;
+}
+
+.text {
+  padding: 3vmax 0 0vmax;
+  background: #1c1d21;
+  position: relative;
+  z-index: 2;
+}
+.text h1,
+.text .title-1 {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.text h1 a,
+.text .title-1 a {
+  color: #e53935;
+  word-break: break-word;
+  width: auto;
+}
+
+.promo {
+  height: 49vmax;
+  position: relative;
+  overflow: hidden;
+}
+
+.promo_photo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0%;
+}
+.promo_photo img {
+  display: block !important;
+  object-fit: cover;
+  width: 100%;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.phone-section {
+  will-change: transform;
+}
+
+.ezgage-underline__text {
+  background-image: -webkit-linear-gradient(0deg, #206cb6 -200%, #46edf3 100%);
+}
+
+.blob-hero {
+  background: radial-gradient(
+    circle at center,
+    #257ebf 20%,
+    #1c1e26 70%,
+    transparent
+  );
+  background-size: contain;
+  opacity: 0.4;
+}
+
+.hero-section {
+  position: relative;
+  width: 100%;
+  padding-top: 3.75rem;
+}
+
+@media (min-width: 1024px) {
+  .hero-section {
+    padding-top: 7.8125rem;
+  }
+}
+
+.phone-container {
+  position: relative;
+  height: 2300px;
+}
+
+.phone-section {
+  height: 100vh;
+  width: 100%;
+  pointer-events: none;
+  position: sticky;
+  top: 0;
+  touch-action: auto;
+}
+
+.hidden-video {
+  display: none;
 }
